--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                     <!-- Title & Text -->
                     <div class="text-center">
                         <h2 class="text-xl font-bold mb-2">DATA SEDANG DIPROSES</h2>
-                        <p class="text-gray-600">Sedang memproses data Anda, mohon tunggu...</p>
+                        <p class="text-gray-600">Sedang memproses data Anda, mohon tunggu</p>
                     </div>
 
                     <!-- Loading dots -->
@@ -356,7 +356,7 @@
                                 ✓
                             </div>
                             <h2 class="text-xl font-bold mb-2">TERIMA KASIH</h2>
-                            <div class="text-sm space-y-2">
+                            <div class="text-sm space-y-2 md:px-6">
                                 <p>
                                     Kalau bermanfaat, jangan lupa support dengan follow, beli promo via tag lokasi, atau
                                     kirim GoPay ke creator ya!
