--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-2E015SNMTP');
+    
+        const isLocal = location.hostname === 'localhost' || location.hostname === '127.0.0.1';
+        if (!isLocal) {
+            gtag('js', new Date());
+            gtag('config', 'G-2E015SNMTP');
+        } else {
+            console.log('[DEV] GA4 not loaded in non-production.');
+        }
     </script>
 </head>
 
