--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
-    
+
         const isLocal = location.hostname === 'localhost' || location.hostname === '127.0.0.1';
         if (!isLocal) {
             gtag('js', new Date());
@@ -27,6 +27,78 @@
 </head>
 
 <body class="bg-gray-100 flex flex-col space-y-1 md:space-y-4 h-screen">
+
+    <!-- Modal Overlay -->
+    <div id="infoModal"
+        class="fixed inset-0 bg-black/50 backdrop-blur-sm flex items-center justify-center z-50 opacity-0 pointer-events-none transition-opacity duration-300">
+
+        <div
+            class="max-w-md w-full mx-4 bg-white shadow-lg rounded-xl p-4 text-gray-700 border border-gray-100 relative transform scale-95 transition-transform duration-300">
+
+            <div class="absolute top-0 left-0 w-full flex items-center">
+                <h2 class="flex-1 text-xl font-bold text-gray-800 text-center flex justify-center">
+                    Sedikit Catatan dari Kami 💬
+                </h2>
+                <button id="closeModal"
+                    class="bg-gray-600 p-2 rounded-tr-xl text-gray-400 hover:text-white transition-colors duration-200">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                    </svg>
+                </button>
+            </div>
+
+            <!-- 1. Gratis -->
+            <div class="flex items-start gap-3 mt-8 mb-3">
+                <div class="w-8 flex-shrink-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 text-green-500 flex-shrink-0" fill="none"
+                        viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M4 8l8-4 8 4v8l-8 4-8-4V8z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4" />
+                    </svg>
+                </div>
+                <div class="flex-1">
+                    <p>
+                        <span class="font-semibold">Nggak ada biaya, nggak ada langganan,</span>
+                        tapi yang pasti tools ini aman & gratis.
+                    </p>
+                </div>
+            </div>
+
+            <!-- 2. Apresiasi -->
+            <div class="flex items-start gap-3 mb-3">
+                <div class="w-8 flex-shrink-0">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 text-pink-500" fill="currentColor"
+                        viewBox="0 0 20 20">
+                        <path
+                            d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z" />
+                    </svg>
+                </div>
+                <div class="flex-1">
+                    <p>
+                        Kalau website ini ngebantu kamu,
+                        <span class="font-medium"><b>jangan lupa terima kasih</b></span>
+                        atau beri <b>sedikit apresiasi</b> ya 🙌
+                    </p>
+                </div>
+            </div>
+
+            <!-- 3. Masukan -->
+            <div class="bg-blue-50 border border-blue-100 rounded-xl p-4 flex items-start gap-3">
+                <div>
+                    <p class="font-semibold text-blue-700">Sampaikan masukan dengan cara yang baik 🙏</p>
+                    <p class="text-sm text-blue-600 mt-1">
+                        Kami juga manusia, tapi kami akan selalu mencoba terbuka untuk feedback yang membangun.
+                        Sampaikan dengan cara yang sopan, singkat dan jelas akan sangat membantu.
+                    </p>
+                </div>
+            </div>
+
+            <div class="mt-6 text-center text-sm text-gray-500">
+                <p>Terima kasih sudah pakai website ini 💖</p>
+            </div>
+        </div>
+    </div>
 
     <div class="absolute top-[80px] right-0">
         <div class="relative inline-block text-left">
@@ -41,8 +113,7 @@
             </button>
 
             <!-- Dropdown menu -->
-            <div id="langMenu"
-                class="absolute right-0 w-20 bg-white text-gray-800 border border-gray-200 hidden">
+            <div id="langMenu" class="absolute right-0 w-20 bg-white text-gray-800 border border-gray-200 hidden">
                 <a href="#" class="block px-4 py-2 bg-gray-100 hover:bg-gray-200">🇮🇩 ID</a>
                 <a href="en/index.html" class="block px-4 py-2 hover:bg-gray-200">🇬🇧 EN</a>
             </div>
@@ -307,69 +378,98 @@
 
             <div id="step-4"
                 class="step-content flex-1 overflow-y-auto flex flex-col space-y-4 items-center justify-center hidden">
-                <div id="resultProcess" class="max-w-md flex flex-col space-y-4">
-                    <!-- Title & Text -->
-                    <div class="text-center">
-                        <h2 class="text-xl font-bold mb-2">DATA SEDANG DIPROSES</h2>
-                        <p class="text-gray-600">Sedang memproses data Anda, mohon tunggu</p>
+                <div class="flex-1">
+                    <div id="resultProcess" class="max-w-md flex flex-col space-y-4">
+                        <!-- Title & Text -->
+                        <div class="text-center">
+                            <h2 class="text-xl font-bold mb-2">DATA SEDANG DIPROSES</h2>
+                            <p class="text-gray-600">Sedang memproses data Anda, mohon tunggu</p>
+                        </div>
+
+                        <!-- Loading dots -->
+                        <div class="flex justify-center space-x-2">
+                            <div class="w-3 h-3 bg-blue-500 rounded-full animate-bounce [animation-delay:-0.3s]"></div>
+                            <div class="w-3 h-3 bg-blue-500 rounded-full animate-bounce [animation-delay:-0.15s]"></div>
+                            <div class="w-3 h-3 bg-blue-500 rounded-full animate-bounce"></div>
+                        </div>
+                    </div>
+                    <div id="resultShow" class="max-w-md flex flex-col space-y-4 hidden">
+                        <!-- Title & Text -->
+                        <div class="text-center">
+                            <h2 class="text-xl font-bold mb-2">DATA SELESAI DIPROSES ✅</h2>
+                            <p id="infoUnfollow" class="mt-4 text-center text-gray-600">
+                                Tidak ada user yang unfollow 🎉
+                            </p>
+                        </div>
                     </div>
 
-                    <!-- Loading dots -->
-                    <div class="flex justify-center space-x-2">
-                        <div class="w-3 h-3 bg-blue-500 rounded-full animate-bounce [animation-delay:-0.3s]"></div>
-                        <div class="w-3 h-3 bg-blue-500 rounded-full animate-bounce [animation-delay:-0.15s]"></div>
-                        <div class="w-3 h-3 bg-blue-500 rounded-full animate-bounce"></div>
+                    <div id="resultCopy" class="hidden">
+                        <div class="mb-5">
+                            <p id="infoUnfollow" class="text-center text-blue-600 text-sm">
+                                Silakan gunakan "Copy Data" untuk menyalin semua data. Setelah itu, kamu bisa tempel
+                                (paste)
+                                di chat, excel atau di mana pun yang kamu butuhkan
+                            </p>
+                        </div>
+                        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                            <!-- 1. Copy to clipboard -->
+                            <div class="flex flex-col space-y-1 items-center">
+                                <button id="btnCopy" aria-label="Copy data"
+                                    class="flex items-center gap-2 w-full h-full justify-center px-6 py-4 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none">
+                                    <!-- Clipboard SVG -->
+                                    <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2"
+                                        viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 2H15V4H9V2Z" />
+                                        <path stroke-linecap="round" stroke-linejoin="round"
+                                            d="M7 6H17C18.1046 6 19 6.89543 19 8V20C19 21.1046 18.1046 22 17 22H7C5.89543 22 5 21.1046 5 20V8C5 6.89543 5.89543 6 7 6Z" />
+                                    </svg>
+                                    <span class="text-sm font-medium">Copy Data</span>
+                                </button>
+
+                                <!-- <span class="text-xs italic totalUnfl">0 user found</span> -->
+                            </div>
+
+                            <!-- 2. Download .txt -->
+                            <div class="flex flex-col space-y-1 items-center">
+                                <button id="btnDownload" aria-label="Download file"
+                                    class="flex items-center gap-2 w-full h-full justify-center px-6 py-4 bg-green-600 text-white rounded-md hover:bg-green-700 focus:outline-none">
+                                    <!-- Download SVG -->
+                                    <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2"
+                                        viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 3V15" />
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M8 11L12 15L16 11" />
+                                        <path stroke-linecap="round" stroke-linejoin="round" d="M21 21H3" />
+                                    </svg>
+                                    <span class="text-sm font-medium">Download File</span>
+                                </button>
+
+                                <!-- <span class="text-xs italic totalUnfl">0 user found</span> -->
+                            </div>
+                        </div>
+
+                        <!-- Feedback text -->
+                        <p id="actionFeedback"
+                            class="mt-3 text-center text-sm text-gray-500 flex items-center justify-center h-4"></p>
                     </div>
                 </div>
-                <div id="resultShow" class="max-w-md flex flex-col space-y-4 hidden">
-                    <!-- Title & Text -->
-                    <div class="text-center">
-                        <h2 class="text-xl font-bold mb-2">DATA SELESAI DIPROSES ✅</h2>
-                        <p id="infoUnfollow" class="mt-4 text-center text-gray-600">
-                            Tidak ada user yang unfollow 🎉
+
+                <div>
+                    <div
+                        class="flex items-center justify-center space-x-3 text-sm p-2 border border-dashed border-gray-400 rounded-lg">
+                        <div class="text-xs">
+                            Lebih suka versi lama?
+                        </div>
+                        <div class="flex space-x-3 items-center">
+                            <a href="./v1.html" class="text-blue-600 text-underline">
+                                Kembali v1.0
+                            </a>
+                        </div>
+                    </div>
+                    <div>
+                        <p class="text-xs text-center mt-1">
+                            Catatan: jika ada perubahan, kami tidak akan maintenance v1.0
                         </p>
                     </div>
-                </div>
-
-                <div id="resultCopy" class="hidden">
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                        <!-- 1. Copy to clipboard -->
-                        <div class="flex flex-col space-y-1 items-center">
-                            <button id="btnCopy" aria-label="Copy data"
-                                class="flex items-center gap-2 w-full h-full justify-center px-6 py-4 bg-blue-600 text-white rounded-md hover:bg-blue-700 focus:outline-none">
-                                <!-- Clipboard SVG -->
-                                <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2"
-                                    viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M9 2H15V4H9V2Z" />
-                                    <path stroke-linecap="round" stroke-linejoin="round"
-                                        d="M7 6H17C18.1046 6 19 6.89543 19 8V20C19 21.1046 18.1046 22 17 22H7C5.89543 22 5 21.1046 5 20V8C5 6.89543 5.89543 6 7 6Z" />
-                                </svg>
-                                <span class="text-sm font-medium">Copy Data</span>
-                            </button>
-
-                            <!-- <span class="text-xs italic totalUnfl">0 user found</span> -->
-                        </div>
-
-                        <!-- 2. Download .txt -->
-                        <div class="flex flex-col space-y-1 items-center">
-                            <button id="btnDownload" aria-label="Download file"
-                                class="flex items-center gap-2 w-full h-full justify-center px-6 py-4 bg-green-600 text-white rounded-md hover:bg-green-700 focus:outline-none">
-                                <!-- Download SVG -->
-                                <svg class="w-8 h-8" fill="none" stroke="currentColor" stroke-width="2"
-                                    viewBox="0 0 24 24">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 3V15" />
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M8 11L12 15L16 11" />
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="M21 21H3" />
-                                </svg>
-                                <span class="text-sm font-medium">Download File</span>
-                            </button>
-
-                            <!-- <span class="text-xs italic totalUnfl">0 user found</span> -->
-                        </div>
-                    </div>
-
-                    <!-- Feedback text -->
-                    <p id="actionFeedback" class="mt-3 text-center text-sm text-gray-500 flex items-center justify-center h-4"></p>
                 </div>
             </div>
 
@@ -389,11 +489,13 @@
                                 </p>
                             </div>
                             <div class="flex space-x-4 mt-2">
-                                <a href="https://www.tiktok.com/@maysiella" target="_blank" rel="noopener noreferrer" class="flex-1">
+                                <a href="https://www.tiktok.com/@maysiella" target="_blank" rel="noopener noreferrer"
+                                    class="flex-1">
                                     <img src="./assets/img/QR_Tiktok.png" alt="Tiktok @maysiella">
                                     <span class="text-xs">TIKTOK</span>
                                 </a>
-                                <a href="https://www.tiktok.com/@maysiella" target="_blank" rel="noopener noreferrer" class="flex-1">
+                                <a href="https://www.tiktok.com/@maysiella" target="_blank" rel="noopener noreferrer"
+                                    class="flex-1">
                                     <img src="./assets/img/QR_Gopay.png" alt="Gopay siella">
                                     <span class="text-xs">GOPAY</span>
                                 </a>
@@ -462,18 +564,48 @@
             <!-- Navigation Buttons -->
             <div class="flex justify-between mt-8">
                 <button id="prevBtn"
-                    class="box-border px-4 py-2 bg-white text-gray-700 rounded-lg hover:bg-gray-400 border border-gray-700 hidden">
+                    class="box-border p-2 md:px-4 bg-white text-gray-700 rounded-lg hover:bg-gray-400 border border-gray-700 hidden">
                     Kembali
                 </button>
-                <button id="resetBtn" class="ml-auto mr-2 box-border px-4 py-2 bg-white border border-blue-500 text-blue-500 rounded-lg hover:bg-blue-600 hover:text-white hidden">
+                <button id="resetBtn"
+                    class="ml-auto mr-2 box-border p-2 md:px-4 bg-white border border-blue-500 text-blue-500 rounded-lg hover:bg-blue-600 hover:text-white hidden">
                     Reset
                 </button>
-                <button id="nextBtn" class="box-border px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">
+                <button id="nextBtn" class="box-border p-2 md:px-4 bg-blue-500 text-white rounded-lg hover:bg-blue-600">
                     Lanjutkan
                 </button>
             </div>
         </div>
     </div>
+
+    <script>
+        const modal = document.getElementById("infoModal");
+        const closeModal = document.getElementById("closeModal");
+
+        // Tampilkan modal dengan animasi
+        setTimeout(() => {
+            modal.classList.remove("opacity-0", "pointer-events-none");
+            modal.firstElementChild.classList.remove("scale-95");
+        }, 100);
+
+        // Auto-close
+        setTimeout(() => {
+            hideModal();
+        }, 5000);
+
+        // Tombol close
+        closeModal.addEventListener("click", hideModal);
+
+        // Klik di luar modal = tutup
+        // modal.addEventListener("click", (e) => {
+        //     if (e.target === modal) hideModal();
+        // });
+
+        function hideModal() {
+            modal.classList.add("opacity-0", "pointer-events-none");
+            modal.firstElementChild.classList.add("scale-95");
+        }
+    </script>
 
     <script>
         const steps = document.querySelectorAll(".step-content");
