--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                     </div>
                     <div>
                         <p class="text-xs text-center mt-1">
-                            Catatan: jika ada perubahan, kami tidak akan maintenance v1.0
+                            Catatan: kami tidak akan maintenance v1.0
                         </p>
                     </div>
                 </div>
@@ -591,7 +591,7 @@
         // Auto-close
         setTimeout(() => {
             hideModal();
-        }, 5000);
+        }, 10000);
 
         // Tombol close
         closeModal.addEventListener("click", hideModal);
