--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <title>Check Follow Back 2.0 | Tiktok: @maysiella | IG: @siella_</title>
+    <title>Tools Gratis Check Unfollow IG 2.0 | Tiktok: @maysiella | IG: @siella_</title>
     <link href="./assets/css/styles.css" rel="stylesheet" />
     <meta name="description"
         content="Tools aman untuk melihat siapa yang belum mengikuti kamu kembali di Instagram. 100% privasi terjaga. Follow @siella_ di Instagram & @maysiella di TikTok untuk update terbaru!">
